Crash. Volume to mesh with 0 amount of voxels #94969

Closed
opened 2022-01-17 08:44:45 +01:00 by Vyacheslav Kobozev · 17 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-12 19:46, hash: 97c2c39916
3.0 release crashes too.

Just open the file and connect zero value to amount.
untitled.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-12 19:46, hash: `97c2c39916` 3.0 release crashes too. Just open the file and connect zero value to amount. [untitled.blend](https://archive.blender.org/developer/F12808116/untitled.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach

#99004 was marked as duplicate of this issue

#99004 was marked as duplicate of this issue

#98991 was marked as duplicate of this issue

#98991 was marked as duplicate of this issue

#98976 was marked as duplicate of this issue

#98976 was marked as duplicate of this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed here.

BLI_assert failed: F:\source\blender-git\blender\source\blender\blenkernel\intern\volume_to_mesh.cc:78, create_grid_with_changed_resolution(), at 'resolution_factor > 0.0f'

Confirmed here. `BLI_assert failed: F:\source\blender-git\blender\source\blender\blenkernel\intern\volume_to_mesh.cc:78, create_grid_with_changed_resolution(), at 'resolution_factor > 0.0f'`

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Interesting. The errors I get:

  1. First I got a crash on EEVEE just by opening the file - P2949
  2. Then re-opened fine and got this after connecting the zero:

terminate called after throwing an instance of 'openvdb::v8_0::ArithmeticError' what(): ArithmeticError: Inversion of singular 3x3 matrix

(I also get this crash if I drag it and hit some numbers around 8).

Interesting. The errors I get: 1. First I got a crash on EEVEE just by opening the file - [P2949](https://archive.blender.org/developer/P2949.txt) 2. Then re-opened fine and got this after connecting the zero: `terminate called after throwing an instance of 'openvdb::v8_0::ArithmeticError' what(): ArithmeticError: Inversion of singular 3x3 matrix` (I also get this crash if I drag it and hit some numbers around 8).

Added subscriber: @bent

Added subscriber: @bent

Added subscriber: @cmzw

Added subscriber: @cmzw
Erik Abrahamsson self-assigned this 2022-06-20 10:40:11 +02:00

This issue was referenced by 6d196b8f5e

This issue was referenced by 6d196b8f5e95b8f5e537f7b7910e313c27497a8b

This issue was referenced by 522dcc54af

This issue was referenced by 522dcc54af3564d30cf0db3ec277a14c6c7046e6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added this report and commit in corrective release list. Feel free to remove if you've any concerns

Added this report and commit in corrective release list. Feel free to remove if you've any concerns

Added subscribers: @rygelXVI, @lateasusual

Added subscribers: @rygelXVI, @lateasusual
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94969
No description provided.