Fix T94969: Crash in Volume to Mesh with 0 voxels

Checks if voxel amount or -size is <= 0 and if so, returns early.

Differential Revision: https://developer.blender.org/D15241